data/derived/fa15/progs/unify/prog2530.ml.out
Characters 115-132:
  ([(x1+x2+a1)/10],[a :: (x1+x2+a1) mod 10]) in 
                         ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         (int * 'a) list
